Bug 381836 - Krita crashed trying to open .psb file
Summary: Krita crashed trying to open .psb file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (show other bugs)
Version: 3.1.4
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2017-06-30 17:41 UTC by benaventeadrian
Modified: 2017-07-01 12:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
attachment-31551-0.html (1.41 KB, text/html)
2017-07-01 04:17 UTC, benaventeadrian
Details
Well, this is the .PSB (which now I know it stands for PhotosShop Big) (1.13 MB, image/vnd.adobe.photoshop)
2017-07-01 04:27 UTC, benaventeadrian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description benaventeadrian 2017-06-30 17:41:15 UTC
Application: krita (3.1.4)

Qt Version: 5.6.1
Frameworks Version: 5.35.0
Operating System: Linux 4.4.0-83-generic x86_64
Distribution: Linux Mint 18.1 Serena

-- Information about the crash:
Krita crashed on start when I tried to open a .psb (Photoshop Intelligent Object) file. I know Krita doesn't support this format but I think the program should display an alert message instead of just crashing.

The crash can be reproduced every time.

-- Backtrace:
Application: Krita (krita), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f75e77788c0 (LWP 20433))]

Thread 10 (Thread 0x7f759eaf8700 (LWP 20448)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f75e55306bb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e6273d72 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#3  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75df6306ba in start_thread (arg=0x7f759eaf8700) at pthread_create.c:333
#5  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f759f2f9700 (LWP 20445)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f75e55306bb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e5529906 in QSemaphore::tryAcquire(int, int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e2dde92a in KisTileDataSwapper::run() () from /usr/lib/x86_64-linux-gnu/libkritaimage.so.16
#4  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f75df6306ba in start_thread (arg=0x7f759f2f9700) at pthread_create.c:333
#6  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f759fafa700 (LWP 20444)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f75e55306bb in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e552965b in QSemaphore::acquire(int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e2dc509e in ?? () from /usr/lib/x86_64-linux-gnu/libkritaimage.so.16
#4  0x00007f75e2dc585a in ?? () from /usr/lib/x86_64-linux-gnu/libkritaimage.so.16
#5  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f75df6306ba in start_thread (arg=0x7f759fafa700) at pthread_create.c:333
#7  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f75bafa5700 (LWP 20441)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f75e55305f6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e552be2a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75df6306ba in start_thread (arg=0x7f75bafa5700) at pthread_create.c:333
#5  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f75b3fff700 (LWP 20440)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f75e55305f6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e552be2a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75df6306ba in start_thread (arg=0x7f75b3fff700) at pthread_create.c:333
#5  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f75bb7a6700 (LWP 20439)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f75e55305f6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e552be2a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75df6306ba in start_thread (arg=0x7f75bb7a6700) at pthread_create.c:333
#5  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f75bbfa7700 (LWP 20438)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f75e55305f6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#2  0x00007f75e552be2a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#3  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75df6306ba in start_thread (arg=0x7f75bbfa7700) at pthread_create.c:333
#5  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f75c79f8700 (LWP 20436)):
#0  0x00007f75e4c1b70d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f75df10f38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f75df10f49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f75e575937b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f75e5701ffa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f75e552a9e4 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f75df85b515 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f75df6306ba in start_thread (arg=0x7f75c79f8700) at pthread_create.c:333
#9  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f75d25cd700 (LWP 20435)):
#0  0x00007f75e4c1b70d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f75e3515c62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f75e35178d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f75d4913d29 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f75e552f808 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f75df6306ba in start_thread (arg=0x7f75d25cd700) at pthread_create.c:333
#6  0x00007f75e4c273dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f75e77788c0 (LWP 20433)):
[KCrash Handler]
#6  0x00007f75e4b55428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
#7  0x00007f75e4b5702a in __GI_abort () at abort.c:89
#8  0x00007f75e5516f41 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f75e106f87f in ?? () from /usr/lib/x86_64-linux-gnu/libkritaglobal.so.16
#10 0x00007f758ad1ec46 in ?? () from /usr/lib/x86_64-linux-gnu/kritaplugins/kritapsdimport.so
#11 0x00007f758ad1f3fb in ?? () from /usr/lib/x86_64-linux-gnu/kritaplugins/kritapsdimport.so
#12 0x00007f758ad093a8 in ?? () from /usr/lib/x86_64-linux-gnu/kritaplugins/kritapsdimport.so
#13 0x00007f758ad08117 in ?? () from /usr/lib/x86_64-linux-gnu/kritaplugins/kritapsdimport.so
#14 0x00007f75e7248acd in ?? () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#15 0x00007f75e7247b25 in KisFilterChain::invokeChain() () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#16 0x00007f75e7250475 in KisImportExportManager::importDocument(QString const&, QString const&, KisImportExportFilter::ConversionStatus&) () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#17 0x00007f75e7237873 in KisDocument::openFile() () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#18 0x00007f75e7237ec8 in KisDocument::openUrlInternal(QUrl const&) () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#19 0x00007f75e723828b in KisDocument::openUrl(QUrl const&, KisDocument::OpenUrlFlags) () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#20 0x00007f75e7255840 in KisMainWindow::openDocumentInternal(QUrl const&, KisDocument*) () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#21 0x00007f75e7227c82 in KisApplication::start(KisApplicationArguments const&) () from /usr/lib/x86_64-linux-gnu/libkritaui.so.16
#22 0x000000000040507a in main ()

Possible duplicates by query: bug 378240, bug 377996, bug 377986, bug 377872, bug 375284.

Reported using DrKonqi
Comment 1 Halla Rempt 2017-06-30 18:04:11 UTC
Well... Actually it could work. Can you share the psd file with me?
Comment 2 benaventeadrian 2017-07-01 04:17:33 UTC
Created attachment 106394 [details]
attachment-31551-0.html

Hi, thanks for your reply. Notice I've said *.psb*, which is the PS 
output format for exported intelligent objects, not .psd.

Greetings


El 30/06/17 a las 15:04, Boudewijn Rempt escribió:
> https://bugs.kde.org/show_bug.cgi?id=381836
>
> Boudewijn Rempt <boud@valdyas.org> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |boud@valdyas.org
>
> --- Comment #1 from Boudewijn Rempt <boud@valdyas.org> ---
> Well... Actually it could work. Can you share the psd file with me?
>
Comment 3 benaventeadrian 2017-07-01 04:27:45 UTC
Created attachment 106395 [details]
Well, this is the .PSB (which now I know it stands for PhotosShop Big)

I've added the file
Comment 4 Halla Rempt 2017-07-01 12:14:02 UTC
Git commit 677a74797132e9331fd25da21da0ac0053ee082d by Boudewijn Rempt.
Committed on 01/07/2017 at 12:11.
Pushed by rempt into branch 'krita/3.2'.

Add support for PSB files

PSB is Photoshop's Large File file format. It supports documents
up to 300.000 pixels in any dimension. Our psd importer has always
been able to handle the format, though there was a rather pointless
assert that would go off when loading version 2 photoshop files.

We also need to add psb to our mimedatabase extension, since by
default, shared-mime-info associates psb with some kind of wine
extension file.

M  +4    -1    libs/koplugin/KisMimeDatabase.cpp
M  +2    -2    plugins/impex/psd/krita_psd_export.json
M  +2    -2    plugins/impex/psd/krita_psd_import.json
M  +0    -2    plugins/impex/psd/psd_layer_section.cpp

https://commits.kde.org/krita/677a74797132e9331fd25da21da0ac0053ee082d
Comment 5 Halla Rempt 2017-07-01 12:15:37 UTC
Note that Krita doesn't load smart objects in any case.
Comment 6 Halla Rempt 2017-07-01 12:18:10 UTC
Git commit 6e2b1ea23d7823ee65a9532ffc82cd61175dde20 by Boudewijn Rempt.
Committed on 01/07/2017 at 12:15.
Pushed by rempt into branch 'master'.

Add support for PSB files

PSB is Photoshop's Large File file format. It supports documents
up to 300.000 pixels in any dimension. Our psd importer has always
been able to handle the format, though there was a rather pointless
assert that would go off when loading version 2 photoshop files.

We also need to add psb to our mimedatabase extension, since by
default, shared-mime-info associates psb with some kind of wine
extension file.

M  +4    -1    libs/koplugin/KisMimeDatabase.cpp
M  +3    -3    plugins/impex/psd/krita_psd_export.json
M  +3    -3    plugins/impex/psd/krita_psd_import.json
M  +0    -2    plugins/impex/psd/psd_layer_section.cpp

https://commits.kde.org/krita/6e2b1ea23d7823ee65a9532ffc82cd61175dde20