Add support for PSB files

PSB is Photoshop's Large File file format. It supports documents
up to 300.000 pixels in any dimension. Our psd importer has always
been able to handle the format, though there was a rather pointless
assert that would go off when loading version 2 photoshop files.

We also need to add psb to our mimedatabase extension, since by
default, shared-mime-info associates psb with some kind of wine
extension file.

BUG:381836